Fixed overflow on about page with tab bg line.

--- a/assets/scss/elements/_tabs.scss
+++ b/assets/scss/elements/_tabs.scss
@@ -14,7 +14,7 @@
     bottom: -10px;
     left: -1rem;
     height: 1px;
-    width: calc(100vw + 1rem);
+    width: 100vw;
 
     background: darken($c_gray-light, 30%);;
     z-index: -1;
